--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ discord = "^1.0.1"
 replit = "^2.0.0"
 flask = "^1.1.2"
 colorama = "^0.4.4"
+pytemperature = "^1.0"
 
 [tool.poetry.dev-dependencies]
 
